docs: don't used fixed position for docs on mobile

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -343,5 +343,11 @@ pre code {
   .doc-main {
     width: 100%;
     margin-left: 0;
+    position: unset;
+  }
+
+  .nav {
+    position: fixed;
+    z-index: 20;
   }
 }
